still trying to fix layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,11 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  zoom: 1;
+}
+
 .flexcontainer {
   display: -webkit-flex;
    display: flex;
